Remove outdated documentation files for PortmoneDirect billing, OCR subsystem, and product requirements. Update API gateway routes to include new Portmone integration and enhance user response models. Refactor Telegram bot commands to improve user interaction and payout messaging. Adjust bonus service to handle Portmone payout processes and error management more effectively.

--- a/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
@@ -10,8 +10,19 @@ msgstr ""
 msgid "Share phone number"
 msgstr "Поделиться номером телефона"
 
-msgid "Welcome to DarnitsaCashBot! Please share your phone number."
-msgstr "Добро пожаловать в DarnitsaCashBot! Пожалуйста, отправьте свой номер телефона."
+msgid ""
+"Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ EasyPay "
+"top-ups for each approved receipt. {consent}"
+msgstr ""
+"Добро пожаловать в DarnitsaCashBot! Поделитесь номером телефона, чтобы мы "
+"могли отправлять пополнения EasyPay на 1₴ за каждый принятый чек. {consent}"
+
+msgid ""
+"Welcome back! We already have your phone number—just send a Darnitsa receipt "
+"photo to receive your next 1₴ top-up. {consent}"
+msgstr ""
+"С возвращением! У нас уже есть ваш номер — просто отправьте фото чека Дарница, "
+"чтобы получить следующий бонус 1₴. {consent}"
 
 msgid ""
 "Send a photo of a Darnitsa receipt to receive a 1₴ top-up. Use /history to "
@@ -26,11 +37,26 @@ msgstr "Вы ещё не отправляли чеки."
 msgid "Last {count} receipts:"
 msgstr "Последние {count} чеков:"
 
-msgid "Tap the button below to update your phone."
-msgstr "Нажмите кнопку ниже, чтобы обновить номер."
+msgid ""
+"We need your verified phone number to trigger EasyPay payouts. Tap the button "
+"below to share it."
+msgstr ""
+"Нам нужен подтверждённый номер телефона, чтобы запускать выплаты EasyPay. "
+"Нажмите кнопку ниже, чтобы поделиться им."
 
-msgid "Phone number saved. Send your receipt when ready."
-msgstr "Номер сохранён. Отправьте чек, когда будете готовы."
+msgid ""
+"Phone number saved. You can now send a receipt photo to get your 1₴ top-up. "
+"{consent}"
+msgstr ""
+"Номер сохранён. Теперь отправьте фото чека, чтобы получить бонус 1₴. "
+"{consent}"
+
+msgid ""
+"By sharing your contact you agree to the promo terms and privacy policy of "
+"Darnitsa."
+msgstr ""
+"Отправляя контакт, вы соглашаетесь с правилами акции и политикой "
+"конфиденциальности Darnitsa."
 
 msgid "Receipt image exceeds 10MB. Please send a smaller file."
 msgstr "Размер изображения больше 10 МБ. Пришлите более лёгкий файл."
@@ -43,4 +69,14 @@ msgstr "Чек получен. Текущий статус: {status}"
 
 msgid "Please send a receipt photo or use /help for guidance."
 msgstr "Пришлите фото чека или используйте /help для подсказок."
+
+msgid ""
+"Receipt received. PortmoneDirect payout will start after acceptance. Current "
+"status: {status}"
+msgstr ""
+"Чек получен. Выплата PortmoneDirect начнётся после подтверждения. Текущий "
+"статус: {status}"
+
+msgid "- {status} @ {uploaded_at} (Portmone bill: {reference}, payout: {payout_status})"
+msgstr "- {status} @ {uploaded_at} (Portmone: {reference}, статус: {payout_status})"
 
