--- a/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
@@ -10,8 +10,19 @@ msgstr ""
 msgid "Share phone number"
 msgstr "Поділитися номером телефону"
 
-msgid "Welcome to DarnitsaCashBot! Please share your phone number."
-msgstr "Вітаємо у DarnitsaCashBot! Будь ласка, поділіться своїм номером телефону."
+msgid ""
+"Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ EasyPay "
+"top-ups for each approved receipt. {consent}"
+msgstr ""
+"Вітаємо в DarnitsaCashBot! Поділіться номером телефону, щоб ми могли "
+"нарахувати 1₴ EasyPay за кожен прийнятий чек. {consent}"
+
+msgid ""
+"Welcome back! We already have your phone number—just send a Darnitsa receipt "
+"photo to receive your next 1₴ top-up. {consent}"
+msgstr ""
+"З поверненням! Ми вже маємо ваш номер — просто надішліть фото чека Дарниця, "
+"щоб отримати наступний бонус 1₴. {consent}"
 
 msgid ""
 "Send a photo of a Darnitsa receipt to receive a 1₴ top-up. Use /history to "
@@ -27,11 +38,26 @@ msgstr "Ще не надсилали жодного чеку."
 msgid "Last {count} receipts:"
 msgstr "Останні {count} чеки:"
 
-msgid "Tap the button below to update your phone."
-msgstr "Натисніть кнопку нижче, щоб оновити номер."
+msgid ""
+"We need your verified phone number to trigger EasyPay payouts. Tap the button "
+"below to share it."
+msgstr ""
+"Нам потрібен підтверджений номер телефону, щоб запустити виплати EasyPay. "
+"Натисніть кнопку нижче, щоб поділитися ним."
 
-msgid "Phone number saved. Send your receipt when ready."
-msgstr "Номер збережено. Надішліть чек, коли будете готові."
+msgid ""
+"Phone number saved. You can now send a receipt photo to get your 1₴ top-up. "
+"{consent}"
+msgstr ""
+"Номер збережено. Тепер можете надіслати фото чека, щоб отримати бонус 1₴. "
+"{consent}"
+
+msgid ""
+"By sharing your contact you agree to the promo terms and privacy policy of "
+"Darnitsa."
+msgstr ""
+"Натискаючи «Поділитися номером», ви погоджуєтеся з умовами акції та політикою "
+"конфіденційності Darnitsa."
 
 msgid "Receipt image exceeds 10MB. Please send a smaller file."
 msgstr "Зображення чека перевищує 10 МБ. Надішліть менший файл."
@@ -44,4 +70,14 @@ msgstr "Чек отримано. Поточний статус: {status}"
 
 msgid "Please send a receipt photo or use /help for guidance."
 msgstr "Надішліть фото чека або скористайтеся /help для інструкцій."
+
+msgid ""
+"Receipt received. PortmoneDirect payout will start after acceptance. Current "
+"status: {status}"
+msgstr ""
+"Чек отримано. Виплата PortmoneDirect почнеться після підтвердження. Поточний "
+"статус: {status}"
+
+msgid "- {status} @ {uploaded_at} (Portmone bill: {reference}, payout: {payout_status})"
+msgstr "- {status} @ {uploaded_at} (Portmone: {reference}, статус: {payout_status})"
 
