Add Portmone mock service to docker-compose and enhance Telegram bot onboarding messages
- Introduced a new service `portmone-mock` in docker-compose for local development.
- Updated onboarding messages in the Telegram bot to include personalized greetings and improved user interaction.
- Added localization support for new greeting messages in both Ukrainian and Russian language files.
- Refactored onboarding text function to accommodate user names in greetings.

--- a/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
@@ -10,12 +10,35 @@ msgstr ""
 msgid "Share phone number"
 msgstr "Поділитися номером телефону"
 
+msgid "Hello, {name}! 👋"
+msgstr "Привіт, {name}! 👋"
+
+msgid "Hello! 👋"
+msgstr "Привіт! 👋"
+
+msgid ""
+"{greeting}\n\n"
+"Welcome to DarnitsaCashBot! 🎉\n\n"
+"Share your phone number so we can send 1₴ EasyPay top-ups for each approved receipt. {consent}"
+msgstr ""
+"{greeting}\n\n"
+"Вітаємо в DarnitsaCashBot! 🎉\n\n"
+"Поділіться номером телефону, щоб ми могли нарахувати 1₴ EasyPay за кожен прийнятий чек. {consent}"
+
 msgid ""
 "Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ EasyPay "
 "top-ups for each approved receipt. {consent}"
 msgstr ""
 "Вітаємо в DarnitsaCashBot! Поділіться номером телефону, щоб ми могли "
 "нарахувати 1₴ EasyPay за кожен прийнятий чек. {consent}"
+
+msgid ""
+"{greeting}\n\n"
+"Welcome back! We already have your phone number—just send a Darnitsa receipt photo to receive your next 1₴ top-up. {consent}"
+msgstr ""
+"{greeting}\n\n"
+"З поверненням! Ми вже маємо ваш номер — просто надішліть фото чека Дарниця, "
+"щоб отримати наступний бонус 1₴. {consent}"
 
 msgid ""
 "Welcome back! We already have your phone number—just send a Darnitsa receipt "
