--- a/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
@@ -10,12 +10,35 @@ msgstr ""
 msgid "Share phone number"
 msgstr "Поделиться номером телефона"
 
+msgid "Hello, {name}! 👋"
+msgstr "Привет, {name}! 👋"
+
+msgid "Hello! 👋"
+msgstr "Привет! 👋"
+
+msgid ""
+"{greeting}\n\n"
+"Welcome to DarnitsaCashBot! 🎉\n\n"
+"Share your phone number so we can send 1₴ EasyPay top-ups for each approved receipt. {consent}"
+msgstr ""
+"{greeting}\n\n"
+"Добро пожаловать в DarnitsaCashBot! 🎉\n\n"
+"Поделитесь номером телефона, чтобы мы могли отправлять пополнения EasyPay на 1₴ за каждый принятый чек. {consent}"
+
 msgid ""
 "Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ EasyPay "
 "top-ups for each approved receipt. {consent}"
 msgstr ""
 "Добро пожаловать в DarnitsaCashBot! Поделитесь номером телефона, чтобы мы "
 "могли отправлять пополнения EasyPay на 1₴ за каждый принятый чек. {consent}"
+
+msgid ""
+"{greeting}\n\n"
+"Welcome back! We already have your phone number—just send a Darnitsa receipt photo to receive your next 1₴ top-up. {consent}"
+msgstr ""
+"{greeting}\n\n"
+"С возвращением! У нас уже есть ваш номер — просто отправьте фото чека Дарница, "
+"чтобы получить следующий бонус 1₴. {consent}"
 
 msgid ""
 "Welcome back! We already have your phone number—just send a Darnitsa receipt "
