Refactor DarnitsaCashBot to integrate PortmoneDirect, removing the admin API and updating relevant documentation. Enhanced onboarding messages in the Telegram bot to reflect the new payout system. Updated configuration to support Heroku deployment and added new environment variable parsing for database and messaging services. Adjusted tests to accommodate changes in payout handling and improved error management.

--- a/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
@@ -19,18 +19,18 @@ msgstr "Привет! 👋"
 msgid ""
 "{greeting}\n\n"
 "Welcome to DarnitsaCashBot! 🎉\n\n"
-"Share your phone number so we can send 1₴ EasyPay top-ups for each approved receipt. {consent}"
+"Share your phone number so we can send 1₴ PortmoneDirect top-ups for each approved receipt. {consent}"
 msgstr ""
 "{greeting}\n\n"
 "Добро пожаловать в DarnitsaCashBot! 🎉\n\n"
-"Поделитесь номером телефона, чтобы мы могли отправлять пополнения EasyPay на 1₴ за каждый принятый чек. {consent}"
+"Поделитесь номером телефона, чтобы мы могли отправлять пополнения PortmoneDirect на 1₴ за каждый принятый чек. {consent}"
 
 msgid ""
-"Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ EasyPay "
+"Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ PortmoneDirect "
 "top-ups for each approved receipt. {consent}"
 msgstr ""
 "Добро пожаловать в DarnitsaCashBot! Поделитесь номером телефона, чтобы мы "
-"могли отправлять пополнения EasyPay на 1₴ за каждый принятый чек. {consent}"
+"могли отправлять пополнения PortmoneDirect на 1₴ за каждый принятый чек. {consent}"
 
 msgid ""
 "{greeting}\n\n"
@@ -61,10 +61,10 @@ msgid "Last {count} receipts:"
 msgstr "Последние {count} чеков:"
 
 msgid ""
-"We need your verified phone number to trigger EasyPay payouts. Tap the button "
+"We need your verified phone number to trigger PortmoneDirect payouts. Tap the button "
 "below to share it."
 msgstr ""
-"Нам нужен подтверждённый номер телефона, чтобы запускать выплаты EasyPay. "
+"Нам нужен подтверждённый номер телефона, чтобы запускать выплаты PortmoneDirect. "
 "Нажмите кнопку ниже, чтобы поделиться им."
 
 msgid ""
