--- a/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
@@ -19,18 +19,18 @@ msgstr "Привіт! 👋"
 msgid ""
 "{greeting}\n\n"
 "Welcome to DarnitsaCashBot! 🎉\n\n"
-"Share your phone number so we can send 1₴ EasyPay top-ups for each approved receipt. {consent}"
+"Share your phone number so we can send 1₴ PortmoneDirect top-ups for each approved receipt. {consent}"
 msgstr ""
 "{greeting}\n\n"
 "Вітаємо в DarnitsaCashBot! 🎉\n\n"
-"Поділіться номером телефону, щоб ми могли нарахувати 1₴ EasyPay за кожен прийнятий чек. {consent}"
+"Поділіться номером телефону, щоб ми могли нарахувати 1₴ PortmoneDirect за кожен прийнятий чек. {consent}"
 
 msgid ""
-"Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ EasyPay "
+"Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ PortmoneDirect "
 "top-ups for each approved receipt. {consent}"
 msgstr ""
 "Вітаємо в DarnitsaCashBot! Поділіться номером телефону, щоб ми могли "
-"нарахувати 1₴ EasyPay за кожен прийнятий чек. {consent}"
+"нарахувати 1₴ PortmoneDirect за кожен прийнятий чек. {consent}"
 
 msgid ""
 "{greeting}\n\n"
@@ -62,10 +62,10 @@ msgid "Last {count} receipts:"
 msgstr "Останні {count} чеки:"
 
 msgid ""
-"We need your verified phone number to trigger EasyPay payouts. Tap the button "
+"We need your verified phone number to trigger PortmoneDirect payouts. Tap the button "
 "below to share it."
 msgstr ""
-"Нам потрібен підтверджений номер телефону, щоб запустити виплати EasyPay. "
+"Нам потрібен підтверджений номер телефону, щоб запустити виплати PortmoneDirect. "
 "Натисніть кнопку нижче, щоб поділитися ним."
 
 msgid ""
