Update dependencies and enhance deployment process
- Added aiosqlite as a dependency for improved database handling.
- Updated the Procfile to include a release command for automatic database migrations during deployment.
- Adjusted the alembic migration revision to ensure proper versioning.
- Enhanced onboarding text in the Telegram bot to inform users about bonus requirements.
- Updated localization files to reflect changes in onboarding messages.
- Revised Heroku deployment documentation to clarify migration steps and process structure.

--- a/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
@@ -19,18 +19,20 @@ msgstr "Привіт! 👋"
 msgid ""
 "{greeting}\n\n"
 "Welcome to DarnitsaCashBot! 🎉\n\n"
+"We will award bonuses for Darnitsa products. A receipt photo is required.\n\n"
 "Share your phone number so we can send 1₴ PortmoneDirect top-ups for each approved receipt. {consent}"
 msgstr ""
 "{greeting}\n\n"
 "Вітаємо в DarnitsaCashBot! 🎉\n\n"
+"Ми нараховуємо бонуси за препарати Дарниця. Потрібне фото чека.\n\n"
 "Поділіться номером телефону, щоб ми могли нарахувати 1₴ PortmoneDirect за кожен прийнятий чек. {consent}"
 
 msgid ""
 "Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ PortmoneDirect "
 "top-ups for each approved receipt. {consent}"
 msgstr ""
-"Вітаємо в DarnitsaCashBot! Поділіться номером телефону, щоб ми могли "
-"нарахувати 1₴ PortmoneDirect за кожен прийнятий чек. {consent}"
+"Вітаємо в DarnitsaCashBot! Ми нараховуємо бонуси за препарати Дарниця. Потрібне фото чека.\n\n"
+"Поділіться номером телефону, щоб ми могли нарахувати 1₴ PortmoneDirect за кожен прийнятий чек. {consent}"
 
 msgid ""
 "{greeting}\n\n"
