--- a/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
@@ -25,7 +25,7 @@ msgstr ""
 "{greeting}\n\n"
 "Вітаємо в DarnitsaCashBot! 🎉\n\n"
 "Ми нараховуємо бонуси за препарати Дарниця. Потрібне фото чека.\n\n"
-"Поділіться номером телефону, щоб ми могли нарахувати 1₴ PortmoneDirect за кожен прийнятий чек. {consent}"
+"Поділіться номером телефону, щоб ми могли надсилати поповнення 1₴ PortmoneDirect за кожен прийнятий чек. {consent}"
 
 msgid ""
 "Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ PortmoneDirect "
