Add QR code processing and enhance receipt handling in API
- Introduced new `ReceiptLineItem` model to represent individual items in receipts.
- Updated receipt processing to include QR code detection and scraping of receipt data.
- Enhanced logging for QR code processing and improved error handling for missing QR codes.
- Modified Telegram bot messages to emphasize the requirement for QR codes on receipts.
- Updated dependencies in `pyproject.toml` to include `qreader`, `beautifulsoup4`, and `lxml` for improved web scraping capabilities.

--- a/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
@@ -24,7 +24,8 @@ msgid ""
 msgstr ""
 "{greeting}\n\n"
 "Вітаємо в DarnitsaCashBot! 🎉\n\n"
-"Ми нараховуємо бонуси за препарати Дарниця. Потрібне фото чека.\n\n"
+"Ми нараховуємо бонуси за препарати Дарниця. Потрібне фото чека.\n"
+"Переконайтеся, що на чеку є QR код.\n\n"
 "Поділіться номером телефону, щоб ми могли надсилати поповнення 1₴ PortmoneDirect за кожен прийнятий чек. {consent}"
 
 msgid ""
@@ -40,7 +41,7 @@ msgid ""
 msgstr ""
 "{greeting}\n\n"
 "З поверненням! Ми вже маємо ваш номер — просто надішліть фото чека Дарниця, "
-"щоб отримати наступний бонус 1₴. {consent}"
+"щоб отримати наступний бонус 1₴. Переконайтеся, що на чеку є QR код. {consent}"
 
 msgid ""
 "Welcome back! We already have your phone number—just send a Darnitsa receipt "
@@ -54,6 +55,7 @@ msgid ""
 "see your past submissions or /change_phone to update your number."
 msgstr ""
 "Надішліть фото чеку з продуктами Дарниця, щоб отримати бонус 1₴. "
+"Переконайтеся, що на чеку є QR код.\n"
 "Скористайтеся /history, щоб переглянути історію, або /change_phone для "
 "оновлення номера."
 
@@ -75,7 +77,7 @@ msgid ""
 "{consent}"
 msgstr ""
 "Номер збережено. Тепер можете надіслати фото чека, щоб отримати бонус 1₴. "
-"{consent}"
+"Переконайтеся, що на чеку є QR код. {consent}"
 
 msgid ""
 "By sharing your contact you agree to the promo terms and privacy policy of "
@@ -94,7 +96,7 @@ msgid "Receipt received. Current status: {status}"
 msgstr "Чек отримано. Поточний статус: {status}"
 
 msgid "Please send a receipt photo or use /help for guidance."
-msgstr "Надішліть фото чека або скористайтеся /help для інструкцій."
+msgstr "Надішліть фото чека з QR кодом або скористайтеся /help для інструкцій."
 
 msgid ""
 "Receipt received. PortmoneDirect payout will start after acceptance. Current "
