--- a/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
@@ -23,13 +23,17 @@ msgid ""
 msgstr ""
 "{greeting}\n\n"
 "Добро пожаловать в DarnitsaCashBot! 🎉\n\n"
+"Мы начисляем бонусы за препараты Дарница. Нужно фото чека.\n"
+"Убедитесь, что на чеке есть QR код.\n\n"
 "Поделитесь номером телефона, чтобы мы могли отправлять пополнения PortmoneDirect на 1₴ за каждый принятый чек. {consent}"
 
 msgid ""
 "Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ PortmoneDirect "
 "top-ups for each approved receipt. {consent}"
 msgstr ""
-"Добро пожаловать в DarnitsaCashBot! Поделитесь номером телефона, чтобы мы "
+"Добро пожаловать в DarnitsaCashBot! Мы начисляем бонусы за препараты Дарница. Нужно фото чека.\n"
+"Убедитесь, что на чеке есть QR код.\n\n"
+"Поделитесь номером телефона, чтобы мы "
 "могли отправлять пополнения PortmoneDirect на 1₴ за каждый принятый чек. {consent}"
 
 msgid ""
@@ -38,7 +42,7 @@ msgid ""
 msgstr ""
 "{greeting}\n\n"
 "С возвращением! У нас уже есть ваш номер — просто отправьте фото чека Дарница, "
-"чтобы получить следующий бонус 1₴. {consent}"
+"чтобы получить следующий бонус 1₴. Убедитесь, что на чеке есть QR код. {consent}"
 
 msgid ""
 "Welcome back! We already have your phone number—just send a Darnitsa receipt "
@@ -52,6 +56,7 @@ msgid ""
 "see your past submissions or /change_phone to update your number."
 msgstr ""
 "Отправьте фото чека с товарами Дарница и получите бонус 1₴. "
+"Убедитесь, что на чеке есть QR код.\n"
 "Используйте /history для истории и /change_phone для обновления номера."
 
 msgid "No receipts submitted yet."
@@ -72,7 +77,7 @@ msgid ""
 "{consent}"
 msgstr ""
 "Номер сохранён. Теперь отправьте фото чека, чтобы получить бонус 1₴. "
-"{consent}"
+"Убедитесь, что на чеке есть QR код. {consent}"
 
 msgid ""
 "By sharing your contact you agree to the promo terms and privacy policy of "
@@ -91,7 +96,7 @@ msgid "Receipt received. Current status: {status}"
 msgstr "Чек получен. Текущий статус: {status}"
 
 msgid "Please send a receipt photo or use /help for guidance."
-msgstr "Пришлите фото чека или используйте /help для подсказок."
+msgstr "Пришлите фото чека с QR кодом или используйте /help для подсказок."
 
 msgid ""
 "Receipt received. PortmoneDirect payout will start after acceptance. Current "
