Refactor bonus payout system and remove Portmone integration
- Updated the README.md to reflect the removal of PortmoneDirect integration and simplified the description of the automation platform.
- Removed Portmone-related setup instructions and references from the documentation.
- Refactored the bonus service to eliminate Portmone dependencies, changing the provider to "manual" and adjusting the payout logic accordingly.
- Enhanced user experience by ensuring phone number validation is enforced before processing receipts.
- Updated error handling and notifications for users regarding payout requirements and failures.
- Cleaned up related code and models to streamline the bonus transaction process.

--- a/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
@@ -19,13 +19,13 @@ msgstr "Привет! 👋"
 msgid ""
 "{greeting}\n\n"
 "Welcome to DarnitsaCashBot! 🎉\n\n"
-"Share your phone number so we can send 1₴ PortmoneDirect top-ups for each approved receipt. {consent}"
+"Share your phone number so we can send 1₴ top-ups for each approved receipt. {consent}"
 msgstr ""
 "{greeting}\n\n"
 "Добро пожаловать в DarnitsaCashBot! 🎉\n\n"
 "Мы начисляем бонусы за препараты Дарница. Нужно фото чека.\n"
 "Убедитесь, что на чеке есть QR код.\n\n"
-"Поделитесь номером телефона, чтобы мы могли отправлять пополнения PortmoneDirect на 1₴ за каждый принятый чек. {consent}"
+"Поделитесь номером телефона, чтобы мы могли отправлять пополнения на 1₴ за каждый принятый чек. {consent}"
 
 msgid ""
 "Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ PortmoneDirect "
@@ -66,10 +66,10 @@ msgid "Last {count} receipts:"
 msgstr "Последние {count} чеков:"
 
 msgid ""
-"We need your verified phone number to trigger PortmoneDirect payouts. Tap the button "
+"We need your verified phone number to trigger payouts. Tap the button "
 "below to share it."
 msgstr ""
-"Нам нужен подтверждённый номер телефона, чтобы запускать выплаты PortmoneDirect. "
+"Нам нужен подтверждённый номер телефона, чтобы запускать выплаты. "
 "Нажмите кнопку ниже, чтобы поделиться им."
 
 msgid ""
@@ -99,12 +99,12 @@ msgid "Please send a receipt photo or use /help for guidance."
 msgstr "Пришлите фото чека с QR кодом или используйте /help для подсказок."
 
 msgid ""
-"Receipt received. PortmoneDirect payout will start after acceptance. Current "
+"Receipt received. Payout will start after acceptance. Current "
 "status: {status}"
 msgstr ""
-"Чек получен. Выплата PortmoneDirect начнётся после подтверждения. Текущий "
+"Чек получен. Выплата начнётся после подтверждения. Текущий "
 "статус: {status}"
 
-msgid "- {status} @ {uploaded_at} (Portmone bill: {reference}, payout: {payout_status})"
-msgstr "- {status} @ {uploaded_at} (Portmone: {reference}, статус: {payout_status})"
+msgid "- {status} @ {uploaded_at} (Выплата: {reference}, статус: {payout_status})"
+msgstr "- {status} @ {uploaded_at} (Выплата: {reference}, статус: {payout_status})"
 
