--- a/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/uk/LC_MESSAGES/bot.po
@@ -20,20 +20,20 @@ msgid ""
 "{greeting}\n\n"
 "Welcome to DarnitsaCashBot! 🎉\n\n"
 "We will award bonuses for Darnitsa products. A receipt photo is required.\n\n"
-"Share your phone number so we can send 1₴ PortmoneDirect top-ups for each approved receipt. {consent}"
+"Share your phone number so we can send 1₴ top-ups for each approved receipt. {consent}"
 msgstr ""
 "{greeting}\n\n"
 "Вітаємо в DarnitsaCashBot! 🎉\n\n"
 "Ми нараховуємо бонуси за препарати Дарниця. Потрібне фото чека.\n"
 "Переконайтеся, що на чеку є QR код.\n\n"
-"Поділіться номером телефону, щоб ми могли надсилати поповнення 1₴ PortmoneDirect за кожен прийнятий чек. {consent}"
+"Поділіться номером телефону, щоб ми могли надсилати поповнення 1₴ за кожен прийнятий чек. {consent}"
 
 msgid ""
 "Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ PortmoneDirect "
 "top-ups for each approved receipt. {consent}"
 msgstr ""
 "Вітаємо в DarnitsaCashBot! Ми нараховуємо бонуси за препарати Дарниця. Потрібне фото чека.\n\n"
-"Поділіться номером телефону, щоб ми могли нарахувати 1₴ PortmoneDirect за кожен прийнятий чек. {consent}"
+"Поділіться номером телефону, щоб ми могли нарахувати 1₴ за кожен прийнятий чек. {consent}"
 
 msgid ""
 "{greeting}\n\n"
@@ -66,10 +66,10 @@ msgid "Last {count} receipts:"
 msgstr "Останні {count} чеки:"
 
 msgid ""
-"We need your verified phone number to trigger PortmoneDirect payouts. Tap the button "
+"We need your verified phone number to trigger payouts. Tap the button "
 "below to share it."
 msgstr ""
-"Нам потрібен підтверджений номер телефону, щоб запустити виплати PortmoneDirect. "
+"Нам потрібен підтверджений номер телефону, щоб запустити виплати. "
 "Натисніть кнопку нижче, щоб поділитися ним."
 
 msgid ""
@@ -99,14 +99,14 @@ msgid "Please send a receipt photo or use /help for guidance."
 msgstr "Надішліть фото чека з QR кодом або скористайтеся /help для інструкцій."
 
 msgid ""
-"Receipt received. PortmoneDirect payout will start after acceptance. Current "
+"Receipt received. Payout will start after acceptance. Current "
 "status: {status}"
 msgstr ""
-"Чек отримано. Виплата PortmoneDirect почнеться після підтвердження. Поточний "
+"Чек отримано. Виплата почнеться після підтвердження. Поточний "
 "статус: {status}"
 
-msgid "- {status} @ {uploaded_at} (Portmone bill: {reference}, payout: {payout_status})"
-msgstr "- {status} @ {uploaded_at} (Portmone: {reference}, статус: {payout_status})"
+msgid "- {status} @ {uploaded_at} (Виплата: {reference}, статус: {payout_status})"
+msgstr "- {status} @ {uploaded_at} (Виплата: {reference}, статус: {payout_status})"
 
 msgid "Sorry, there was an error connecting to the server. Please try again later."
 msgstr "Вибачте, сталася помилка під час з'єднання з сервером. Будь ласка, спробуйте пізніше."
