Refactor bonus context and localization strings
- Removed the payee_id field from the BonusContext class and adjusted related logic in the bonus preparation function.
- Updated Russian and Ukrainian localization files to simplify welcome messages by removing references to PortmoneDirect, enhancing clarity for users.

--- a/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
+++ b/apps/telegram_bot/locales/ru/LC_MESSAGES/bot.po
@@ -28,13 +28,13 @@ msgstr ""
 "Поделитесь номером телефона, чтобы мы могли отправлять пополнения на 1₴ за каждый принятый чек. {consent}"
 
 msgid ""
-"Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ PortmoneDirect "
+"Welcome to DarnitsaCashBot! Share your phone number so we can send 1₴ "
 "top-ups for each approved receipt. {consent}"
 msgstr ""
 "Добро пожаловать в DarnitsaCashBot! Мы начисляем бонусы за препараты Дарница. Нужно фото чека.\n"
 "Убедитесь, что на чеке есть QR код.\n\n"
 "Поделитесь номером телефона, чтобы мы "
-"могли отправлять пополнения PortmoneDirect на 1₴ за каждый принятый чек. {consent}"
+"могли отправлять пополнения на 1₴ за каждый принятый чек. {consent}"
 
 msgid ""
 "{greeting}\n\n"
